[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
scraper = "0.13"
reqwest = "0.11"
probability = "0.18"
# phf = { version = "0.10", features = ["macros"] }
serde_json = "1.0"
rand = "0.8"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
itertools = "0.10"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
version = "0.11"
features = ["collector"]

[dependencies.riven]
version="2.8.0"
default-features = false
features = ["rustls-tls",]