[package]
name = "bot"
version = "1.0.1"
edition = "2021"
include = ["src/**/*", "README.md"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
scraper = "0.13"
reqwest = "0.11"
probability = "0.18"
serde_json = "1.0"
rand = "0.8"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
itertools = "0.10"
ordered-float = "3.0"
async-recursion = "1.0.0"
rayon = "1.5"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
version = "0.11"
features = ["collector"]

[dependencies.riven]
version="2.8.0"
default-features = false
features = ["rustls-tls",]
